# fastapi-start

./: index.html  main.py  pyproject.toml
